--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(pipecrawler)
+project(lgs_pipecrawler_server)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,20 +7,14 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(lgs_interfaces REQUIRED)
 
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/Crawlercmd.msg"
-  "msg/Crawlerstate.msg"
-  "action/Crawleraction.action"
-  DEPENDENCIES std_msgs
-)
 
 install(
   PROGRAMS
-  launch/pipecrawler_launch.py
-  pipecrawler_server.py
+  launch/full_pipecrawler_system_launch.py
+  pipecrawler_server_node.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
